# photo-rating

./: pyproject.toml
src/photo_rating/: __init__.py  db.py  main.py
src/photo_rating/plugins/: __init__.py  base.py  head_to_head.py  star_rating.py
src/photo_rating/static/: config.html  host-login.html  host.html  join.html  present.html
