[project]
name = "photo-rating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucalhost", email = "lucalhost@noreply.codeberg.org" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.1",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[project.scripts]
photo-rating = "photo_rating:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"
