[project]
name = "photo-rating"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "lucalhost", email = "lucalhost@noreply.codeberg.org" }]
dependencies = [
  "fastapi>=0.138.1",
  "pwdlib[argon2]>=0.3.0",
  "python-multipart>=0.0.32",
  "sqlmodel>=0.0.39",
  "uvicorn>=0.49.0",
]

[project.scripts]
photo-rating = "photo_rating:main"

[build-system]
requires = ["uv_build>=0.11.24,<0.12.0"]
build-backend = "uv_build"

[tool.black]
target-version = ["py312"]

[tool.pyright]
include = ["src/**"]
exclude = ["tests/**"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
